# cpp_modern_course

./: .gitignore  LICENSE  README.md
course/: README.md
course/keynotes/: 04_modern_cpp_course_core_modern_cpp.key  README.md  object_oriented_programming.key
course/pdf/: README.md
course/pdfs/: README.md
course/powerpoints/: 00_modern_cpp_course.pptx  02_modern_cpp_course_language_basics.pptx  06_modern_cpp_course_advanced_programming.pptx  README.md  object_oriented_programming.pptx
docs/: README.md  modern_cpp_course.key  references.md
docs/config/: carbon-config.json
docs/diagrams/: README.md  cpp_history.drawio  cpp_language.drawio  cpp_version_history.drawio  first_inheritance.drawio  managing_inheritance_privacy_private.drawio  managing_inheritance_privacy_protected.drawio  managing_inheritance_privacy_public.drawio  my_first_class.drawio
docs/keynotes/: 00. modern_cpp_course.key  01. modern_cpp_course_introduction.key  02. modern_cpp_course_language_basics.key  05. modern_cpp_course_modern_cpp_expert.key  06. modern_cpp_course_advanced_programming.key  README.md
docs/pdf/: README.md
docs/pictures/: README.md
docs/powerpoints/: 02. modern_cpp_course_language_basics.pptx  03. modern_cpp_course_object_oriented_programming.pptx  04. modern_cpp_course_core_modern_cpp.pptx  (+1 more)
examples/: README.md
examples/main/: README.md  (+1 more)
examples/object_oriented_programming/objects_and_classes/managing_inheritance_privacy_protected/: CMakeLists.txt  README.md  ext_func.hpp
exercises/: README.md
exercises/functions/: CMakeLists.txt  README.md  functions.cpp
(+568 files in other folders)
